--- a/Generator.ipynb
+++ b/Generator.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from lxml import etree"
+    "from lxml import etree\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -21,12 +22,10 @@
      "output_type": "stream",
      "text": [
       "<molecular-dynamics>\n",
-      "  <molecule-configuration/>\n",
-      "  <domain-configuration/>\n",
-      "  <simulation-configuration/>\n",
-      "  <mpi-configuration/>\n",
-      "  <molecule-configuration/>\n",
-      "  <child>some text</child>\n",
+      "  <molecule-configuration a=\"2\"/>\n",
+      "  <domain-configuration a=\"2\"/>\n",
+      "  <simulation-configuration a=\"2\"/>\n",
+      "  <mpi-configuration a=\"2\"/>\n",
       "</molecular-dynamics>\n",
       "\n"
      ]
@@ -37,23 +36,41 @@
     "root = etree.Element('molecular-dynamics')\n",
     "\n",
     "top_level = [\"molecule\",\"domain\",\"simulation\",\"mpi\"]\n",
-    "below_level = \n",
-    "value_range = \n",
+    "domain_level = ['molecules-per-direction', 'domain-size', 'domain-offset','cutoff-radius','linked-cell-size','k_b','block-size']\n",
+    "cutoff_radius_range = np.linspace(0,5,100)\n",
     "\n",
-    "[root.append(etree.Element(ele+'-configuration')) for ele in top_level]\n",
-    "\n",
-    "\n",
+    "[root.append(etree.Element(ele+'-configuration', a=\"2\")) for ele in top_level]\n",
     "\n",
     "\n",
     "\n",
     "# another child with text\n",
-    "child = etree.Element('child')\n",
-    "child.text = 'some text'\n",
-    "root.append(child)\n",
+    "#child = etree.Element('child')\n",
+    "#child.text = 'some text'\n",
+    "#root.append(child)\n",
     "\n",
     "# pretty string\n",
     "s = etree.tostring(root, pretty_print=True)\n",
     "print s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'domain'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_level[1]"
    ]
   },
   {
