--- a/working_nb.ipynb
+++ b/working_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pysgpp as pysgpp\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "from pysgpp.extensions.datadriven.learner import Types\n",
     "from pysgpp.extensions.datadriven.learner import LearnerBuilder\n",
@@ -26,6 +28,10 @@
     "from pysgpp.extensions.datadriven.uq.plot.plot2d import plotSG2d,plotGrid2d\n",
     "from pysgpp.extensions.datadriven.uq.plot.plot3d import plotSG3d\n",
     "from pysgpp.extensions.datadriven.uq.plot.plotGrid import plotGrid\n",
+    "\n",
+    "from pysgpp.extensions.datadriven.learner.folding import RandomFoldingPolicy\n",
+    "\n",
+    "#from learner.builder.RegressorSpecificationDescriptor.FoldingStrategy import RANDOM\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import preprocessing\n",
@@ -36,12 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "#filename = 'output_100_configs.csv'\n",
-    "filename = '2D_param_space_times.csv'\n",
+    "#filename = '2D_param_space_times.csv'\n",
+    "filename = '1000_runs_8D_param_room.csv'\n",
     "\n",
     "\n",
     "df = pd.read_csv(filename, header = None, names = ['params', 'time'])\n",
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "params_ = ['CUTOFF_RADIUS', 'density', 'MOL_Y','MOL_X','DOMAIN_SIZE_Y'\n",
-    "          ,'DOMAIN_SIZE_X','MOL_X','LINKED_CELL_SIZE_X', 'LINKED_CELL_SIZE_Y',]"
+    "          ,'DOMAIN_SIZE_X','MOL_X','LINKED_CELL_SIZE_X', 'LINKED_CELL_SIZE_Y']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,108 +117,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_df = normalize(df[columns])\n",
-    "num_samples = normalized_df.shape[0]"
+    "#df[df.time > 0][params_]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = normalized_df[params_].values\n",
-    "Y = normalized_df['time'].values"
+    "normalized_df = normalize(df[df.time > 0][columns])\n",
+    "train, test = train_test_split(normalized_df, test_size=0.2)\n",
+    "num_samples = train.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train[params_].values\n",
+    "Y_train = train['time'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = test[params_].values\n",
+    "Y_test = test['time'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 9)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(599, 9)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "numDims = X.shape[1]\n",
-    "print X.shape"
+    "X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Test accuracy:[0.017226603272158032]\n",
       "Level: 1\n",
-      "L2Norm: 2.259309\n",
-      "MaxError: 0.759811\n",
-      "MinError: 0.000015\n",
-      "Error: 0.051045\n",
-      "RMSerror: 0.109189\n",
+      "L2Norm: 1.607480\n",
+      "MaxError: 0.588813\n",
+      "MinError: 0.001064\n",
+      "Error: 0.020180\n",
+      "RMSerror: 0.071566\n",
       "Grid size BEFORE refinement: 1\n",
       "Refining grid.. \n",
       "Grid size AFTER refinement: 19\n",
-      "L2Norm: 0.538665\n",
-      "MaxError: 0.198511\n",
-      "MinError: 0.000203\n",
-      "Error: 0.002902\n",
-      "RMSerror: 0.006640\n",
+      "Test accuracy:[0.017226603272158032]\n",
+      "L2Norm: 1.604254\n",
+      "MaxError: 0.493885\n",
+      "MinError: 0.000088\n",
+      "Error: 0.004297\n",
+      "RMSerror: 0.017505\n",
       "--------------------------------------------\n",
+      "Test accuracy:[0.0034818388711247545]\n",
       "Level: 2\n",
-      "L2Norm: 0.538665\n",
-      "MaxError: 0.198511\n",
-      "MinError: 0.000203\n",
-      "Error: 0.002902\n",
-      "RMSerror: 0.006640\n",
+      "L2Norm: 0.722687\n",
+      "MaxError: 0.306497\n",
+      "MinError: 0.000241\n",
+      "Error: 0.004297\n",
+      "RMSerror: 0.017505\n",
       "Grid size BEFORE refinement: 19\n",
       "Refining grid.. \n",
       "Grid size AFTER refinement: 199\n",
-      "L2Norm: 0.315026\n",
-      "MaxError: 0.121987\n",
-      "MinError: 0.000271\n",
-      "Error: 0.000992\n",
-      "RMSerror: 0.002279\n",
-      "--------------------------------------------\n",
-      "Level: 3\n",
-      "L2Norm: 0.315023\n",
-      "MaxError: 0.121841\n",
-      "MinError: 0.000225\n",
-      "Error: 0.000992\n",
-      "RMSerror: 0.002277\n",
-      "Grid size BEFORE refinement: 199\n",
-      "Refining grid.. \n",
-      "Grid size AFTER refinement: 1310\n",
-      "L2Norm: 0.016127\n",
-      "MaxError: 0.005687\n",
-      "MinError: 0.000005\n",
-      "Error: 0.000003\n",
-      "RMSerror: 0.000006\n",
+      "Test accuracy:[0.0034818388711247545]\n",
+      "L2Norm: 0.859448\n",
+      "MaxError: 0.257240\n",
+      "MinError: 0.000035\n",
+      "Error: 0.001233\n",
+      "RMSerror: 0.004375\n",
       "--------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "for levels in range(1, 4):\n",
+    "for levels in range(1, 3):\n",
     "    builder = LearnerBuilder()\n",
     "    builder.buildRegressor()\n",
-    "    builder.withTrainingDataFromNumPyArray(X, Y)\n",
+    "    builder.withTrainingDataFromNumPyArray(X_train, Y_train)\n",
+    "    builder.withTestingDataFromNumPyArray(X_test, Y_test)\n",
     "    builder = builder.withGrid().withBorder(Types.BorderTypes.NONE)\n",
     "    builder.withLevel(levels)\n",
     "    builder = builder.withSpecification()\n",
-    "    builder.withLambda(0.0000001).withAdaptPoints(100)\n",
+    "    builder.withLambda(0.000001).withAdaptPoints(100)\n",
+    "    \n",
+    "    #builder.withRandomFoldingPolicy().withLevel(4)\n",
     "\n",
     "    builder.withIdentityOperator()\n",
     "    builder = builder.withStopPolicy()\n",
@@ -219,8 +240,13 @@
     "    builder.withAccuracy(0.0001)\n",
     "    builder.withImax(1000)\n",
     "    learner = builder.andGetResult()\n",
+    "    \n",
+    "    \n",
     "\n",
-    "    learner.learnData()\n",
+    "    #learner.learnData()\n",
+    "    #learner.learnDataWithFolding()\n",
+    "    learner.learnDataWithTest()\n",
+    "    print 'Test accuracy:' + str(learner.testAccuracy)\n",
     "    print 'Level: %i' % levels\n",
     "    print 'L2Norm: %f' % learner.getL2NormError()\n",
     "    print 'MaxError: %f' % learner.getMaxError()\n",
@@ -232,6 +258,7 @@
     "    learner.refineGrid()\n",
     "    learner.learnData()\n",
     "    print 'Grid size AFTER refinement: %i' % learner.grid.getSize()\n",
+    "    print 'Test accuracy:' + str(learner.testAccuracy)\n",
     "    print 'L2Norm: %f' % learner.getL2NormError()\n",
     "    print 'MaxError: %f' % learner.getMaxError()\n",
     "    print 'MinError: %f' % learner.getMinError()\n",
